--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-body {
+* {
   margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
 }
